third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/bad-concat.stderr
TOML parse error at line 1, column 21
  |
1 | no_concat = "first" "second"
  |                     ^
expected newline, `#`
